--- a/report/project.bib
+++ b/report/project.bib
@@ -12,30 +12,151 @@
 @string{sp = {Signal Processing}}
 @string{jce = {J. of Cardiovas. Electrophy.}}
 @string{AmJPh = {Am. J. of Phys.}}
-@String{c-EMBS87 = "Proceedings of the IEEE Engineering in Medicine and Biology Society 9th Annual International Conference"}% Journal of cardiovascular electrophysiology
+@String{c-EMBS87 = "Proceedings of the IEEE Engineering in Medicine and Biology Society 9th Annual International Conference"}% journaltitle of cardiovascular electrophysiology
 @String{c-EMBS89 = "Proceedings of the IEEE Engineering in Medicine and Biology Society 11th Annual International Conference"}% American Journal of physiology
 
 }
 @article{Ahmad1998,
-  abstract = {The goal of the inverse problem of electrocardiography is noninvasive discrimination and characterization of normal/abnormal cardiac electrical activity from measurements of body surface potentials. Smoothing and attenuation in the torso volume conductor cause the problem to be ill posed. Standard regularized solutions employ an a priori constraint to achieve reliability and may be biased by the constraint chosen as well as the regularization parameter used to weight it. In this paper, we describe an approach that reformulates this inverse problem as the search for a solution that is a member of an admissible solution set; admissibility is defined in terms of the available constraints. In principle, this approach can utilize as many constraints as may be available, unlike standard techniques which do not easily permit the use of multiple constraints. No regularization parameter is required; instead, we need to choose the nature and size of the constraint sets. Constraints described include several spatial constraints, weighted constraints, and temporal constraints. We describe a solution approach based on iterative convex optimization, and the algorithm--the ellipsoid algorithm--which we have used. Accuracy and feasibility of the method are illustrated with simulation results using dipole sources and measured epicardial potentials.},
-  author   = {Ahmad, G F and Brooks, D H and MacLeod, R S},
-  doi      = {10.1114/1.56},
-  file     = {:C$\backslash$:/Users/Taha/Documents/Mendeley Desktop/Ahmad, Brooks, MacLeod - 1998 - An admissible solution approach to inverse electrocardiography.pdf:pdf},
-  issn     = {0090-6964},
-  journal  = {Annals of biomedical engineering},
-  keywords = {convex,inverse problem of electrocardiography,multiple constraints,optimization,set theoretic estimation},
-  number   = {2},
-  pages    = {278--292},
-  pmid     = {9525768},
-  title    = {{An admissible solution approach to inverse electrocardiography}},
-  volume   = {26},
-  year     = {1998}
+  abstract     = {The goal of the inverse problem of electrocardiography is noninvasive discrimination and characterization of normal/abnormal cardiac electrical activity from measurements of body surface potentials. Smoothing and attenuation in the torso volume conductor cause the problem to be ill posed. Standard regularized solutions employ an a priori constraint to achieve reliability and may be biased by the constraint chosen as well as the regularization parameter used to weight it. In this paper, we describe an approach that reformulates this inverse problem as the search for a solution that is a member of an admissible solution set; admissibility is defined in terms of the available constraints. In principle, this approach can utilize as many constraints as may be available, unlike standard techniques which do not easily permit the use of multiple constraints. No regularization parameter is required; instead, we need to choose the nature and size of the constraint sets. Constraints described include several spatial constraints, weighted constraints, and temporal constraints. We describe a solution approach based on iterative convex optimization, and the algorithm--the ellipsoid algorithm--which we have used. Accuracy and feasibility of the method are illustrated with simulation results using dipole sources and measured epicardial potentials.},
+  author       = {Ahmad, G. F. and Brooks, D. H. and MacLeod, R. S.},
+  doi          = {10.1114/1.56},
+  file         = {:C$\backslash$:/Users/Taha/Documents/Mendeley Desktop/Ahmad, Brooks, MacLeod - 1998 - An admissible solution approach to inverse electrocardiography.pdf:pdf},
+  issn         = {0090-6964},
+  journaltitle = {Annals of biomedical engineering},
+  keywords     = {convex,inverse problem of electrocardiography,multiple constraints,optimization,set theoretic estimation},
+  number       = {2},
+  pages        = {278--292},
+  pmid         = {9525768},
+  title        = {{An admissible solution approach to inverse electrocardiography}},
+  volume       = {26},
+  year         = {1998}
 }
-@inproceedings{atmaja2020deep,
+@article{atmaja2020deep,
   title        = {Deep multilayer Perceptrons for dimensional speech emotion recognition},
-  author       = {Atmaja, Bagus Tris and Akagi, Masato},
-  booktitle    = {2020 Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC)},
+  author       = {Atmaja, B. T. and Akagi, M.},
+  journaltitle = {2020 Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC)},
   pages        = {325--331},
+  year         = {2020}
+}
+
+@article{russell1979affective,
+  title        = {Affective space is bipolar.},
+  author       = {Russell, J. A.},
+  journaltitle = {Journal of personality and social psychology},
+  volume       = {37},
+  number       = {3},
+  pages        = {345},
+  year         = {1979},
+  publisher    = {American Psychological Association}
+}
+
+@article{cen2016real,
+  title     = {A real-time speech emotion recognition system and its application in online learning},
+  author    = {Cen, Ling and Wu, Fei and Yu, Zhu Liang and Hu, Fengye},
+  booktitle = {Emotions, technology, design, and learning},
+  pages     = {27--46},
+  year      = {2016},
+  publisher = {Elsevier}
+}
+
+@article{bualan2020emotion,
+  title        = {Emotion classification based on biophysical signals and machine learning techniques},
+  author       = {B{\u{a}}lan, Oana and Moise, Gabriela and Petrescu, Livia and Moldoveanu, Alin and Leordeanu, Marius and Moldoveanu, Florica},
+  journaltitle = {Symmetry},
+  volume       = {12},
+  number       = {1},
+  pages        = {21},
   year         = {2020},
-  organization = {IEEE}
+  publisher    = {Multidisciplinary Digital Publishing Institute}
+}
+
+@misc{tensorflow2015-whitepaper,
+  title  = { {TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
+  url    = {https://www.tensorflow.org/},
+  note   = {Software available from tensorflow.org},
+  author = {
+            Mart\'{i}n~Abadi and
+            Ashish~Agarwal and
+            Paul~Barham and
+            Eugene~Brevdo and
+            Zhifeng~Chen and
+            Craig~Citro and
+            Greg~S.~Corrado and
+            Andy~Davis and
+            Jeffrey~Dean and
+            Matthieu~Devin and
+            Sanjay~Ghemawat and
+            Ian~Goodfellow and
+            Andrew~Harp and
+            Geoffrey~Irving and
+            Michael~Isard and
+            Yangqing Jia and
+            Rafal~Jozefowicz and
+            Lukasz~Kaiser and
+            Manjunath~Kudlur and
+            Josh~Levenberg and
+            Dandelion~Man\'{e} and
+            Rajat~Monga and
+            Sherry~Moore and
+            Derek~Murray and
+            Chris~Olah and
+            Mike~Schuster and
+            Jonathon~Shlens and
+            Benoit~Steiner and
+            Ilya~Sutskever and
+            Kunal~Talwar and
+            Paul~Tucker and
+            Vincent~Vanhoucke and
+            Vijay~Vasudevan and
+            Fernanda~Vi\'{e}gas and
+            Oriol~Vinyals and
+            Pete~Warden and
+            Martin~Wattenberg and
+            Martin~Wicke and
+            Yuan~Yu and
+            Xiaoqiang~Zheng},
+  year   = {2015}
+}
+
+
+@article{scikit-learn,
+  title        = {Scikit-learn: Machine Learning in {P}ython},
+  author       = {Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+                  and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+                  and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+                  Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+  journaltitle = {Journal of Machine Learning Research},
+  volume       = {12},
+  pages        = {2825--2830},
+  year         = {2011}
+}
+
+@inproceedings{eyben2010opensmile,
+  title     = {Opensmile: the munich versatile and fast open-source audio feature extractor},
+  author    = {Eyben, Florian and W{\"o}llmer, Martin and Schuller, Bj{\"o}rn},
+  booktitle = {Proceedings of the 18th ACM international conference on Multimedia},
+  pages     = {1459--1462},
+  year      = {2010}
+}
+
+@article{busso2008iemocap,
+  title     = {IEMOCAP: Interactive emotional dyadic motion capture database},
+  author    = {Busso, Carlos and Bulut, Murtaza and Lee, Chi-Chun and Kazemzadeh, Abe and Mower, Emily and Kim, Samuel and Chang, Jeannette N and Lee, Sungbok and Narayanan, Shrikanth S},
+  journal   = {Language resources and evaluation},
+  volume    = {42},
+  number    = {4},
+  pages     = {335--359},
+  year      = {2008},
+  publisher = {Springer}
+}
+
+@article{busso2016msp,
+  title     = {MSP-IMPROV: An acted corpus of dyadic interactions to study emotion perception},
+  author    = {Busso, Carlos and Parthasarathy, Srinivas and Burmania, Alec and AbdelWahab, Mohammed and Sadoughi, Najmeh and Provost, Emily Mower},
+  journal   = {IEEE Transactions on Affective Computing},
+  volume    = {8},
+  number    = {1},
+  pages     = {67--80},
+  year      = {2016},
+  publisher = {IEEE}
 }
