--- a/report/project.bib
+++ b/report/project.bib
@@ -160,3 +160,10 @@
   year      = {2016},
   publisher = {IEEE}
 }
+
+@article{poria2018meld,
+  title   = {Meld: A multimodal multi-party dataset for emotion recognition in conversations},
+  author  = {Poria, Soujanya and Hazarika, Devamanyu and Majumder, Navonil and Naik, Gautam and Cambria, Erik and Mihalcea, Rada},
+  journal = {arXiv preprint arXiv:1810.02508},
+  year    = {2018}
+}
