--- a/report/main.tex
+++ b/report/main.tex
@@ -118,7 +118,7 @@ The organization of the report is as follows:
     \item The problem and the proposed solutions to it are briefly introduced in this section.
     \item The theory of dimensional and categorical emotions are mentioned in Section \ref{sec:theory}.
     \item The methods, datasets and neural network architectures used in the implementation of the speech emotion recognition can be seen in Section \ref{sec:implementation}.
-    \item Section \ref{sec:results} is left for the definition of the evaluation metrics utilized in the study, the reproduced results, and evaluation of the models with other datasets.  
+    \item Section \ref{sec:results} is left for the definition of the evaluation metrics utilized in the study, the reproduced results, evaluation of the models with other datasets and the discussion on the results.  
 \end{itemize}
 
 \pagebreak
@@ -147,7 +147,6 @@ The idea that emotion categories can be separated based on some emotional dimens
 }
 \caption{\label{tab:vadtable}VAD Dimensions of 6 basic emotions \cite{bualan2020emotion}.}
 \end{table}
-
 
 
 \pagebreak
@@ -245,9 +244,9 @@ Although there are many available datasets on Speech Emotion Recognition, only a
 
 \paragraph{Data Preprocessing}
 
-To augment the dimensional, \textit{i.e.} numerical, labels from the categorical labels. This is conducted by mapping the categorical labels to points in the Valence-Arousal-Dominance space via the mapping given in Table \ref{tab:vadtable} first, and perturbing the points with normally distributed noise with standard deviation 0.01, to reflect the effect of multiple annotators.
+To augment the dimensional, \textit{i.e.} numerical, labels from the categorical labels. This is conducted by mapping the categorical labels to points in the Valence-Arousal-Dominance space via the mapping given in Table \ref{tab:vadtable} first, and perturbing the points with normally distributed noise with standard deviation 0.01, to reflect the effect of multiple annotators. To get the time series data in WAV format in the same datarate of 44.1 kHz from MP4 format, \texttt{FFMPEG} is utilized.   
 
-The whole data formation process can be seen in Figure \ref{fig:dataformation}
+The whole data formation process can be seen in Figure \ref{fig:dataformation}.
 
 \begin{figure}[h]
 \centering
@@ -257,6 +256,9 @@ The whole data formation process can be seen in Figure \ref{fig:dataformation}
 
 \pagebreak
 
+\subsubsection{Models}
+
+The pre-trained models are evaluated using the new test data. Furthermore, to make better conclusions on the models' capability to fit the data, the data is split to train, test and validation sets and the model is evaluated after being retrained. The architectures of the model were not changed. The only change made was the number of training and patience epoch for early stopping. 
 
 
 \section{Results and Discussion} \label{sec:results}
